--- a/lectures/2 Scraping/2b Parsing text.ipynb
+++ b/lectures/2 Scraping/2b Parsing text.ipynb
@@ -28,10 +28,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ancient-console",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>permitnum</th>\n",
+       "      <th>permitclass</th>\n",
+       "      <th>permitclassmapped</th>\n",
+       "      <th>permittypemapped</th>\n",
+       "      <th>permittypedesc</th>\n",
+       "      <th>description</th>\n",
+       "      <th>estprojectcost</th>\n",
+       "      <th>statuscurrent</th>\n",
+       "      <th>originaladdress1</th>\n",
+       "      <th>originalcity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>location1</th>\n",
+       "      <th>housingunitsremoved</th>\n",
+       "      <th>housingunitsadded</th>\n",
+       "      <th>applieddate</th>\n",
+       "      <th>issueddate</th>\n",
+       "      <th>expiresdate</th>\n",
+       "      <th>decisiondate</th>\n",
+       "      <th>contractorcompanyname</th>\n",
+       "      <th>newdescription</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3001064-EG</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>Non-Residential</td>\n",
+       "      <td>Early Design Guidance</td>\n",
+       "      <td>Design Review</td>\n",
+       "      <td>Early Design Guidance for: Land Use Applicatio...</td>\n",
+       "      <td>16000000.0000</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>2200 E MADISON ST</td>\n",
+       "      <td>SEATTLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-122.30341969</td>\n",
+       "      <td>{'latitude': '47.61885483', 'longitude': '-122...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Early Design Guidance for: Land Use Applicatio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3001064-LU</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>Non-Residential</td>\n",
+       "      <td>Master Use Permit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Land Use Application to allow one, 6-story bui...</td>\n",
+       "      <td>16000000.0000</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>2200 E MADISON ST</td>\n",
+       "      <td>SEATTLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-122.30341969</td>\n",
+       "      <td>{'latitude': '47.61885483', 'longitude': '-122...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>2011-06-21</td>\n",
+       "      <td>2012-04-06</td>\n",
+       "      <td>2015-02-17</td>\n",
+       "      <td>2012-02-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Land Use Application to allow one, 6-story bui...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3001095-LU</td>\n",
+       "      <td>Single Family/Duplex</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Master Use Permit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Land Use Application to subdivide one parcel i...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>5414 21ST AVE SW</td>\n",
+       "      <td>SEATTLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-122.35930088</td>\n",
+       "      <td>{'latitude': '47.55326217', 'longitude': '-122...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2012-04-25</td>\n",
+       "      <td>2012-09-05</td>\n",
+       "      <td>2015-08-10</td>\n",
+       "      <td>2012-07-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Land Use Application to subdivide one parcel i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3001121-LU</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Master Use Permit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unit Lot Subdivision</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Canceled</td>\n",
+       "      <td>103 30TH AVE</td>\n",
+       "      <td>SEATTLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-122.29413641</td>\n",
+       "      <td>{'latitude': '47.60184595', 'longitude': '-122...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unit Lot Subdivision</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3001139-LU</td>\n",
+       "      <td>Multifamily</td>\n",
+       "      <td>Residential</td>\n",
+       "      <td>Master Use Permit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cancel per customer request 4/15/08 log #4507\\...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Canceled</td>\n",
+       "      <td>3649 S MORGAN ST</td>\n",
+       "      <td>SEATTLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-122.28533406</td>\n",
+       "      <td>{'latitude': '47.54411404', 'longitude': '-122...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008-03-14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cancel per customer request 4/15/08 log #4507\\...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    permitnum           permitclass permitclassmapped       permittypemapped   \n",
+       "0  3001064-EG            Commercial   Non-Residential  Early Design Guidance  \\\n",
+       "1  3001064-LU            Commercial   Non-Residential      Master Use Permit   \n",
+       "2  3001095-LU  Single Family/Duplex       Residential      Master Use Permit   \n",
+       "3  3001121-LU                   N/A               N/A      Master Use Permit   \n",
+       "4  3001139-LU           Multifamily       Residential      Master Use Permit   \n",
+       "\n",
+       "  permittypedesc                                        description   \n",
+       "0  Design Review  Early Design Guidance for: Land Use Applicatio...  \\\n",
+       "1            NaN  Land Use Application to allow one, 6-story bui...   \n",
+       "2            NaN  Land Use Application to subdivide one parcel i...   \n",
+       "3            NaN                               Unit Lot Subdivision   \n",
+       "4            NaN  Cancel per customer request 4/15/08 log #4507\\...   \n",
+       "\n",
+       "  estprojectcost statuscurrent   originaladdress1 originalcity  ...   \n",
+       "0  16000000.0000     Completed  2200 E MADISON ST      SEATTLE  ...  \\\n",
+       "1  16000000.0000     Completed  2200 E MADISON ST      SEATTLE  ...   \n",
+       "2            NaN     Completed   5414 21ST AVE SW      SEATTLE  ...   \n",
+       "3            NaN      Canceled       103 30TH AVE      SEATTLE  ...   \n",
+       "4            NaN      Canceled   3649 S MORGAN ST      SEATTLE  ...   \n",
+       "\n",
+       "       longitude                                          location1   \n",
+       "0  -122.30341969  {'latitude': '47.61885483', 'longitude': '-122...  \\\n",
+       "1  -122.30341969  {'latitude': '47.61885483', 'longitude': '-122...   \n",
+       "2  -122.35930088  {'latitude': '47.55326217', 'longitude': '-122...   \n",
+       "3  -122.29413641  {'latitude': '47.60184595', 'longitude': '-122...   \n",
+       "4  -122.28533406  {'latitude': '47.54411404', 'longitude': '-122...   \n",
+       "\n",
+       "  housingunitsremoved housingunitsadded applieddate  issueddate expiresdate   \n",
+       "0                 NaN               NaN         NaN         NaN         NaN  \\\n",
+       "1                 0.0             103.0  2011-06-21  2012-04-06  2015-02-17   \n",
+       "2                 NaN               NaN  2012-04-25  2012-09-05  2015-08-10   \n",
+       "3                 NaN               NaN         NaN         NaN         NaN   \n",
+       "4                 NaN               NaN  2008-03-14         NaN         NaN   \n",
+       "\n",
+       "  decisiondate contractorcompanyname   \n",
+       "0          NaN                   NaN  \\\n",
+       "1   2012-02-02                   NaN   \n",
+       "2   2012-07-26                   NaN   \n",
+       "3          NaN                   NaN   \n",
+       "4          NaN                   NaN   \n",
+       "\n",
+       "                                      newdescription  \n",
+       "0  Early Design Guidance for: Land Use Applicatio...  \n",
+       "1  Land Use Application to allow one, 6-story bui...  \n",
+       "2  Land Use Application to subdivide one parcel i...  \n",
+       "3                               Unit Lot Subdivision  \n",
+       "4  Cancel per customer request 4/15/08 log #4507\\...  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "smalldf = pd.read_pickle('../scratch/Seattle_permits.pandas')\n",
@@ -54,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "western-digest",
    "metadata": {},
    "outputs": [],
@@ -82,10 +310,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2d2dbbca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2      NaN\n",
+       "3      NaN\n",
+       "4      NaN\n",
+       "5      NaN\n",
+       "6    False\n",
+       "7    False\n",
+       "8      NaN\n",
+       "9      NaN\n",
+       "Name: noparking, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# look at the output (just the noparking column)\n",
     "smalldf.noparking"
@@ -143,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
